# fozzy

./: CLI.md  Cargo.toml  PLAN.md  README.md  SDK-TS.md
.cargo/: config.toml
.github/workflows/: ci.yml
sdk-ts/: LICENSE  README.md  package-lock.json  package.json
sdk-ts/src/: index.ts
src/: artifacts.rs  engine.rs  envinfo.rs  explore.rs  fsutil.rs  fuzz.rs  lib.rs  main.rs  reporting_cmd.rs  scenario.rs  timeline.rs  tracefile.rs  usage.rs
src/cmd/: artifacts.rs  ci.rs  corpus.rs  map_cmd.rs  memory_cmd.rs  reporting_cmd.rs  schema.rs  usage.rs
src/model/: decisions.rs  memory.rs  reporting.rs  scenario.rs
src/modes/: explore.rs  fuzz.rs
src/platform/: config.rs  duration.rs  envinfo.rs  fsutil.rs
src/runtime/: clock.rs  engine.rs  memorycap.rs  scheduler.rs  timeline.rs  tracefile.rs
tests/: cli_parity.rs  golden_flows.rs  kv.checkers.explore.fozzy.json  memory.leak.fozzy.json  memory.pass.fozzy.json  proc.fozzy.json
